src/objects/TRAK_Test_Execution_History__c.object
<CustomObject>
    <description>Business Description: This object is used to automatically keep a track of all changes to Test Execution.

Technical Description: Populated by a trigger on Test Execution object this is an enhancement to the standard Test Execution History functionality provided by Salesforce as it will allow us to log changes to rich text fields / long text fields also.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will capture the status of approval for Test Execution records. It will be auto-populated through the workflow process: Created on 30/07/2014 by Himanshu Babaria:TRAK</description>
        <inlineHelpText>The status of the approval. This is auto populated as the Test Execution goes through the process.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Execution_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Test_Comments__c</fullName>
        <label>Overall Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Execution__c</fullName>
        <description>TRAK: This field creates the master Detail relationship between the Test Execution (master) and Test Execution History (detail) objects.</description>
        <label>Test Execution</label>
        <referenceTo>TRAK_Test__c</referenceTo>
        <relationshipLabel>Test Execution History</relationshipLabel>
        <relationshipName>Test_Execution_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Outcome__c</fullName>
        <label>Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Passed with minor issues</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Blocked from testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test Execution History</label>
    <nameField>
        <displayFormat>TEH-{00000}</displayFormat>
        <label>Test Execution History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Execution History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>